Separated particle creation to be based off character. Has a bug in the splitting of the strings, creates duplicates.

--- a/ff-ext/test.html
+++ b/ff-ext/test.html
@@ -11,7 +11,7 @@
 </style>
 
 <body>
-<div class="box">casdf</div>
+<div class="box">casdf bees are good yayyeeee</div>
 </body>
 
 <a href="#fuxk">fxk</a>
