Cleaned up the code to convert text nodes to spans and individual letters to particles.

--- a/ff-ext/test.html
+++ b/ff-ext/test.html
@@ -14,7 +14,16 @@
 <div class="box">casdf bees are good yayyeeee</div>
 </body>
 
-<a href="#fuxk">fxk</a>
+<a href="#fuxk">fxkbsdaf</a>
 
-
+<table>
+<tbody>
+  <tr>
+   <td>
+     <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/user_interface/Browser_action">Toolbar button</a> 
+    (browser action)
+    </td>
+  </tr>
+ </tbody>
+</table>
 </html>
